[package]
name = "portless"
version = "0.1.0"
edition = "2024"
description = "Replace port numbers with stable .localhost URLs for local development"

[[bin]]
name = "portless"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.9"
colored = "2"
nix = { version = "0.29", features = ["signal", "process"] }
anyhow = "1"
