[package]
name = "portless"
version = "0.1.11"
edition = "2024"
description = "Replace port numbers with stable .localhost URLs for local development — built with Rust, only 1MB"
license = "MIT"
repository = "https://github.com/lusons/portless-rs"
homepage = "https://github.com/lusons/portless-rs"
keywords = ["proxy", "localhost", "dev", "tunnel", "port"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[[bin]]
name = "portless"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.9"
colored = "2"
nix = { version = "0.29", features = ["signal", "process"] }
anyhow = "1"
