[package]
name = "portless"
version = "0.1.11"
edition = "2024"
description = "Replace port numbers with stable .localhost URLs for local development — built with Rust, only 1MB"
license = "MIT"
repository = "https://github.com/lusons/portless-rs"
homepage = "https://github.com/lusons/portless-rs"
keywords = ["proxy", "localhost", "dev", "tunnel", "port"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[lints.rust]
future-incompatible = { level = "warn", priority = 1 }
nonstandard_style = { level = "deny", priority = 2 }

[lints.clippy]
# High priority performance and correctness lints
redundant_clone = { level = "deny", priority = 10 }
needless_collect = { level = "deny", priority = 9 }
large_enum_variant = { level = "warn", priority = 8 }
clone_on_copy = { level = "deny", priority = 7 }
unnecessary_wraps = { level = "warn", priority = 6 }

[lib]
name = "portless"
path = "src/lib.rs"

[[bin]]
name = "portless"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.9"
colored = "2"
nix = { version = "0.29", features = ["signal", "process"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

